# mist_api_v2/models/get_secret_response.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from mist_api_v2.models.base_model_ import Model
+from mist_api_v2.models.response_metadata import ResponseMetadata
+from mist_api_v2.models.secret import Secret
+from mist_api_v2 import util
+
+from mist_api_v2.models.response_metadata import ResponseMetadata  # noqa: E501
+from mist_api_v2.models.secret import Secret  # noqa: E501
+
+class GetSecretResponse(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, data=None, meta=None):  # noqa: E501
+        """GetSecretResponse - a model defined in OpenAPI
+
+        :param data: The data of this GetSecretResponse.  # noqa: E501
+        :type data: Secret
+        :param meta: The meta of this GetSecretResponse.  # noqa: E501
+        :type meta: ResponseMetadata
+        """
+        self.openapi_types = {
+            'data': Secret,
+            'meta': ResponseMetadata
+        }
+
+        self.attribute_map = {
+            'data': 'data',
+            'meta': 'meta'
+        }
+
+        self._data = data
+        self._meta = meta
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GetSecretResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GetSecretResponse of this GetSecretResponse.  # noqa: E501
+        :rtype: GetSecretResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data(self):
+        """Gets the data of this GetSecretResponse.
+
+
+        :return: The data of this GetSecretResponse.
+        :rtype: Secret
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data):
+        """Sets the data of this GetSecretResponse.
+
+
+        :param data: The data of this GetSecretResponse.
+        :type data: Secret
+        """
+
+        self._data = data
+
+    @property
+    def meta(self):
+        """Gets the meta of this GetSecretResponse.
+
+
+        :return: The meta of this GetSecretResponse.
+        :rtype: ResponseMetadata
+        """
+        return self._meta
+
+    @meta.setter
+    def meta(self, meta):
+        """Sets the meta of this GetSecretResponse.
+
+
+        :param meta: The meta of this GetSecretResponse.
+        :type meta: ResponseMetadata
+        """
+
+        self._meta = meta
