# mist_api_v2/models/secret.py
@@ -1,0 +1,168 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from mist_api_v2.models.base_model_ import Model
+from mist_api_v2 import util
+
+
+class Secret(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id=None, name=None, tags=None, created_by=None, owned_by=None):  # noqa: E501
+        """Secret - a model defined in OpenAPI
+
+        :param id: The id of this Secret.  # noqa: E501
+        :type id: str
+        :param name: The name of this Secret.  # noqa: E501
+        :type name: str
+        :param tags: The tags of this Secret.  # noqa: E501
+        :type tags: object
+        :param created_by: The created_by of this Secret.  # noqa: E501
+        :type created_by: str
+        :param owned_by: The owned_by of this Secret.  # noqa: E501
+        :type owned_by: str
+        """
+        self.openapi_types = {
+            'id': str,
+            'name': str,
+            'tags': object,
+            'created_by': str,
+            'owned_by': str
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'name': 'name',
+            'tags': 'tags',
+            'created_by': 'created_by',
+            'owned_by': 'owned_by'
+        }
+
+        self._id = id
+        self._name = name
+        self._tags = tags
+        self._created_by = created_by
+        self._owned_by = owned_by
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Secret':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Secret of this Secret.  # noqa: E501
+        :rtype: Secret
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self):
+        """Gets the id of this Secret.
+
+
+        :return: The id of this Secret.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id):
+        """Sets the id of this Secret.
+
+
+        :param id: The id of this Secret.
+        :type id: str
+        """
+
+        self._id = id
+
+    @property
+    def name(self):
+        """Gets the name of this Secret.
+
+
+        :return: The name of this Secret.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name):
+        """Sets the name of this Secret.
+
+
+        :param name: The name of this Secret.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def tags(self):
+        """Gets the tags of this Secret.
+
+
+        :return: The tags of this Secret.
+        :rtype: object
+        """
+        return self._tags
+
+    @tags.setter
+    def tags(self, tags):
+        """Sets the tags of this Secret.
+
+
+        :param tags: The tags of this Secret.
+        :type tags: object
+        """
+
+        self._tags = tags
+
+    @property
+    def created_by(self):
+        """Gets the created_by of this Secret.
+
+
+        :return: The created_by of this Secret.
+        :rtype: str
+        """
+        return self._created_by
+
+    @created_by.setter
+    def created_by(self, created_by):
+        """Sets the created_by of this Secret.
+
+
+        :param created_by: The created_by of this Secret.
+        :type created_by: str
+        """
+
+        self._created_by = created_by
+
+    @property
+    def owned_by(self):
+        """Gets the owned_by of this Secret.
+
+
+        :return: The owned_by of this Secret.
+        :rtype: str
+        """
+        return self._owned_by
+
+    @owned_by.setter
+    def owned_by(self, owned_by):
+        """Sets the owned_by of this Secret.
+
+
+        :param owned_by: The owned_by of this Secret.
+        :type owned_by: str
+        """
+
+        self._owned_by = owned_by
