# mist_api_v2/openapi/openapi.yaml
@@ -4044,63 +4044,276 @@ paths:
         explode: false
         in: path
         name: script
-        required: true
-        schema:
-          type: string
-        style: simple
-      responses:
-        "200":
-          content:
-            application/octet-stream:
-              schema:
-                format: binary
-                type: string
-          description: Script downloaded successfully
-        "401":
-          description: Authentication failed
-        "403":
-          description: You are not authorized to perform this action
-        "404":
-          description: Script not found
-      summary: Download script
-      tags:
-      - scripts
-      x-openapi-router-controller: mist_api_v2.controllers.scripts_controller
-  /api/v2/scripts/{script}/url:
+        responses:
+          "200":
+            content:
+              application/octet-stream:
+                schema:
+                  format: binary
+                  type: string
+            description: Script downloaded successfully
+          "404":
+            description: Script not found
+            summary: Download script
+            tags:
+            - scripts
+            x-openapi-router-controller: mist_api_v2.controllers.scripts_controller
+        /api/v2/scripts/{script}/url:
+          get:
+            description: Generate url for fetching script file
+            operationId: generate_script_url
+            parameters:
+            - example: my-script
+              explode: false
+              in: path
+              name: script
+              $ref: '#/components/schemas/inline_response_200_1'
+              description: Script url generated successfully
+              description: Script not found
+              security:
+              - ApiKeyAuth:
+                - read:script
+              - CookieAuth:
+                - read:script
+              summary: Generate script url
+              tags:
+              - scripts
+              x-openapi-router-controller: mist_api_v2.controllers.scripts_controller
+  /api/v2/secrets:
     get:
-      description: Generate url for fetching script file
-      operationId: generate_script_url
+      description: List secrets owned by the active org. READ permission required
+        on secret.
+      operationId: list_secrets
       parameters:
-      - example: my-script
-        explode: false
-        in: path
-        name: script
-        required: true
+      - description: Only return results matching search filter
+        examples:
+          Filter by name:
+            value: name:clouds/EC2-Tokyo
+        explode: true
+        in: query
+        name: search
+        required: false
         schema:
           type: string
-        style: simple
+        style: form
+      - description: Order results by
+        examples:
+          Sort by name, descending:
+            value: -name
+        explode: true
+        in: query
+        name: sort
+        required: false
+        schema:
+          type: string
+        style: form
+      - description: Start results from index or id
+        examples:
+          Start from the 50th result:
+            value: "50"
+          Start from item with id xyz:
+            value: xyz
+        explode: true
+        in: query
+        name: start
+        required: false
+        schema:
+          type: string
+        style: form
+      - description: Limit number of results, 1000 max
+        explode: true
+        in: query
+        name: limit
+        required: false
+        schema:
+          type: integer
+        style: form
+      - description: Only return these fields
+        examples:
+          Only return id:
+            value: id
+          Return id, name & created_by:
+            value: id,title,created_by
+        explode: true
+        in: query
+        name: only
+        required: false
+        schema:
+          type: string
+        style: form
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_200_1'
-          description: Script url generated successfully
+                $ref: '#/components/schemas/ListSecretsResponse'
+          description: List secrets response
+        "401":
+          description: Authentication failed
+        "403":
+          description: You are not authorized to perform this action
+      security:
+      - ApiKeyAuth:
+        - read:secret
+      - CookieAuth:
+        - read:secret
+      summary: List secrets
+      tags:
+      - secrets
+      x-cli-table-default:
+      - id
+      - name
+      - tags
+      x-cli-table-extended:
+      - id
+      - name
+      - tags
+      - owned_by
+      - created_by
+      x-openapi-router-controller: mist_api_v2.controllers.secrets_controller
+    post:
+      description: Creates a new secret and returns the secret's id. CREATE permission
+        required on secret.
+      operationId: create_secret
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateSecretRequest'
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Secret'
+          description: Secret added succesfully
+        "401":
+          description: Authentication failed
+        "403":
+          description: You are not authorized to perform this action
+        "409":
+          description: Path already exists. Change name of key
+      security:
+      - ApiKeyAuth:
+        - create:secret
+      - CookieAuth:
+        - create:secret
+      summary: Create secret
+      tags:
+      - secrets
+      x-openapi-router-controller: mist_api_v2.controllers.secrets_controller
+  /api/v2/secrets/{secret}:
+    delete:
+      description: Delete target secret
+      operationId: delete_secret
+      parameters:
+      - explode: false
+        in: path
+        name: secret
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          description: Secret deleted successfully
         "401":
           description: Authentication failed
         "403":
           description: You are not authorized to perform this action
         "404":
-          description: Script not found
+          description: Secret not found
       security:
       - ApiKeyAuth:
-        - read:script
+        - delete:secret
       - CookieAuth:
-        - read:script
-      summary: Generate script url
+        - delete:secret
+      summary: Delete secret
       tags:
-      - scripts
-      x-openapi-router-controller: mist_api_v2.controllers.scripts_controller
+      - secrets
+      x-openapi-router-controller: mist_api_v2.controllers.secrets_controller
+    get:
+      description: Read target secret
+      operationId: get_secret
+      parameters:
+      - explode: false
+        in: path
+        name: secret
+        required: true
+        schema:
+          type: string
+        style: simple
+      - description: Return the secret's value. Requires READ_VALUE permission on
+          secret.
+        explode: true
+        in: query
+        name: value
+        required: false
+        schema:
+          type: boolean
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetSecretResponse'
+          description: Secret returned successfully
+        "401":
+          description: Authentication failed
+        "403":
+          description: You are not authorized to perform this action
+        "404":
+          description: Secret not found
+      security:
+      - ApiKeyAuth:
+        - read:secret
+      - CookieAuth:
+        - read:secret
+      summary: Get secret
+      tags:
+      - secrets
+      x-openapi-router-controller: mist_api_v2.controllers.secrets_controller
+    put:
+      description: Edit/update target secret
+      operationId: edit_secret
+      parameters:
+      - explode: false
+        in: path
+        name: secret
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EditSecretRequest'
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Secret'
+          description: Secret edited successfully
+        "400":
+          description: Missing `secret` required parameter
+        "401":
+          description: Authentication failed
+        "403":
+          description: You are not authorized to perform this action
+        "404":
+          description: Secret not found
+      security:
+      - ApiKeyAuth:
+        - edit:secret
+      - CookieAuth:
+        - edit:secret
+      summary: Edit secret
+      tags:
+      - secrets
+      x-openapi-router-controller: mist_api_v2.controllers.secrets_controller
   /api/v2/sizes:
     get:
       description: List sizes owned by the active org. READ permission required on
@@ -5672,8 +5885,6 @@ components:
           type: integer
         location:
           type: string
-        credentials:
-          type: object
         config:
           type: object
         tags:
@@ -6007,6 +6218,21 @@ components:
       oneOf:
       - $ref: '#/components/schemas/CreateMachineResponse_oneOf'
       - $ref: '#/components/schemas/CreateMachineResponse_oneOf_1'
+      type: object
+    CreateSecretRequest:
+      example:
+        name: name
+        secret: '{}'
+      properties:
+        name:
+          description: The name of the secret. This is equivalent to the path the
+            secret will be stored in Vault
+          type: string
+        secret:
+          type: object
+      required:
+      - name
+      - secret
       type: object
     CreateSnapshotResponse:
       type: object
@@ -6466,6 +6692,15 @@ components:
         selectors:
           $ref: '#/components/schemas/Selector'
       type: object
+    EditSecretRequest:
+      example:
+        secret: '{}'
+      properties:
+        secret:
+          type: object
+      required:
+      - secret
+      type: object
     EquinixCloudRequest:
       properties:
         provider:
@@ -6895,6 +7130,25 @@ components:
       properties:
         data:
           $ref: '#/components/schemas/Script'
+        meta:
+          $ref: '#/components/schemas/ResponseMetadata'
+      type: object
+    GetSecretResponse:
+      example:
+        data:
+          name: name
+          owned_by: owned_by
+          id: id
+          created_by: created_by
+          tags: '{}'
+        meta:
+          total: 0
+          start: 1
+          sort: sort
+          returned: 6
+      properties:
+        data:
+          $ref: '#/components/schemas/Secret'
         meta:
           $ref: '#/components/schemas/ResponseMetadata'
       type: object
@@ -8022,6 +8276,32 @@ components:
         meta:
           $ref: '#/components/schemas/ResponseMetadata'
       type: object
+    ListSecretsResponse:
+      example:
+        data:
+        - name: name
+          owned_by: owned_by
+          id: id
+          created_by: created_by
+          tags: '{}'
+        - name: name
+          owned_by: owned_by
+          id: id
+          created_by: created_by
+          tags: '{}'
+        meta:
+          total: 0
+          start: 1
+          sort: sort
+          returned: 6
+      properties:
+        data:
+          items:
+            $ref: '#/components/schemas/Secret'
+          type: array
+        meta:
+          $ref: '#/components/schemas/ResponseMetadata'
+      type: object
     ListSizesResponse:
       example:
         data:
@@ -8955,6 +9235,25 @@ components:
         name:
           type: string
         description:
+          type: string
+        tags:
+          type: object
+        created_by:
+          type: string
+        owned_by:
+          type: string
+      type: object
+    Secret:
+      example:
+        name: name
+        owned_by: owned_by
+        id: id
+        created_by: created_by
+        tags: '{}'
+      properties:
+        id:
+          type: string
+        name:
           type: string
         tags:
           type: object
